<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="au.com.mysites.camps.activities.SummarySitesActivity">
    <item
        android:id="@+id/menu_summary_settings"
        android:orderInCategory="100"
        android:title="@string/summary_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_summary_sign_out"
        android:title="@string/summary_sign_out"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_summary_database_manage"
        android:title="@string/summary_database_manage"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_summary_database_query"
        android:title="@string/summary_database_query"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
