<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/maintbackuprestoretoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:logo="@drawable/caravan"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:title="@string/app_name"
            app:titleMarginStart="24dp"/>
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/backup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/maint_backup_database"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/list_item_text"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/guidelinebackup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/backupfilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:hint="@string/maint_filename"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/list_item_text"
        android:textStyle="bold"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinebackup"/>

    <Button
        android:id="@+id/restore"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/maint_restore_database"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/list_item_text"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/guidelinerestore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/restorefilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:hint="@string/maint_filename"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/list_item_text"
        android:textStyle="bold"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinerestore"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelinebackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelinerestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7"/>

</android.support.constraint.ConstraintLayout>
