<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E0E0E0"
                tools:context="au.com.mysites.camps.MainActivity">

    <FrameLayout
        android:id="@+id/main_filter_bar_container"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_toolbar"
        android:background="?android:attr/colorPrimary"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <android.support.v7.widget.CardView
            android:id="@+id/main_filter_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="8dp"
            android:padding="12dp"
            android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/main_button_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:tint="@color/greySecondary"
                    app:srcCompat="@drawable/ic_filter_list_white_24px" />

                <LinearLayout
                    android:id="@+id/main_text_current_search_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/main_button_filter"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:id="@+id/main_text_current_search"
                        style="@style/AppTheme.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_sites"
                        android:textColor="@color/greySecondary"
                        tools:text="Filter" />

                    <TextView
                        android:id="@+id/main_text_current_sort_by"
                        style="@style/AppTheme.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sorted_by_rating"
                        android:textColor="@color/greyDisabled" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/main_button_clear_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:tint="@color/greySecondary"
                    app:srcCompat="@drawable/ic_close_white_24px" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <!-- Main sites recycler -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_sites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_filter_bar_container"
        android:background="@android:color/white"
        tools:listitem="@layout/item_site" />

    <!-- Shadow below toolbar -->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/main_filter_bar_container"
        android:background="@drawable/bg_shadow" />

    <!-- Empty list (pizza guy) view -->
    <LinearLayout
        android:id="@+id/main_view_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/main_toolbar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            style="@style/AppTheme.PizzaGuy"
            android:src="@drawable/pizza_monster" />

        <TextView
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_no_results"
            android:textColor="@color/greyDisabled" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/main_progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/main_recycler_sites"
        android:layout_alignTop="@+id/main_recycler_sites"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>